trunk/Archive2/27/ba0ac9fe74cbd8/output
main.cpp:13:13: error: call to deleted constructor of 'Deleted'
    Deleted d(Deleted{});
            ^ ~~~~~~~~~
main.cpp:7:5: note: 'Deleted' has been explicitly marked deleted here
    Deleted(Deleted&&) = delete;
    ^
1 error generated.
