trunk/Archive2/27/ba0ac9fe74cbd8/main.cpp
struct Deleted
{
    Deleted() {}
    
    Deleted(const Deleted &) {}
    
    Deleted(Deleted&&) = delete;
};


int main()
{
    Deleted d(Deleted{});
}